# django-mlmtree

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
mlmtree/: admin.py  apps.py  decorators.py  models.py  urls.py  views.py
mlmtree/migrations/: 0001_initial.py  0002_alter_tree_id.py  0003_auto_20210621_2352.py  0004_auto_20210626_1532.py  0005_person_email.py  0006_tree_urlpattern.py
mlmtree/static/mlmtree/css/: style.css
mlmtree/static/mlmtree/js/: tree.js
mlmtree/templates/mlmtree/: base.html  error.html  login.html
mlmtree/templates/mlmtree/app/: base.html  home.html  tree_view.html
mlmtree/templates/mlmtree/snippets/: form.html  menubar.html
